# meeting-management

./: .gitignore  README.md  next.config.js  package-lock.json  package.json
meeting-arrangement-wasm/: Cargo.toml
meeting-arrangement-wasm/pkg/: meeting_arrangement_wasm.d.ts  meeting_arrangement_wasm.js  meeting_arrangement_wasm_bg.js  meeting_arrangement_wasm_bg.wasm  meeting_arrangement_wasm_bg.wasm.d.ts  package.json
meeting-arrangement-wasm/src/: lib.rs
rfcs/: 低代码开发平台评价.md
src/: middleware.ts
src/app/: layout.tsx  page.tsx
src/app/api/auth/[...nextauth]/: options.ts
src/app/api/create-meeting/: route.ts
src/app/api/create-table/: route.ts
src/app/api/delete-meeting/: route.ts
src/app/api/get-pwd/: route.ts
src/app/api/init/: route.ts
src/app/api/try-create-meeting/: route.ts
src/app/dashboard/: layout.tsx  page.tsx
src/app/dashboard/details/[meeting_id]/: page.tsx
src/app/dashboard/my/: page.tsx
src/app/dashboard/profile/: page.tsx
src/app/dashboard/reserve/: loading.tsx  page.tsx
src/components/ui/: Button.tsx  MeetingCard.tsx  MeetingForm.tsx  MeetingsChoose.tsx  MeetingsDisplay.tsx  SidebarButton.tsx
