[package]
name = "meeting-arrangement-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2" }
serde-wasm-bindgen = "0.5"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4" }
